--- a/Omasivu.html
+++ b/Omasivu.html
@@ -35,10 +35,12 @@
 				<article>
 					<h3>Googlesta löydettyjä Homam-nimisiä juttuja</h3>
 					<ul>
-						<li>Homam on Intialaisten juhla</li>
-						<li>Homam on Arabian kielinen elokuva</li>
-						<li>Homam Ahmed on jalkapalloilia jonka hinta-arvio on 500 000€</li>
+						<li>Homam on Intialaisten juhla.</li>
+						<li>Homam on Arabian kielinen elokuva.</li>
+						<li>Homam Ahmed on jalkapalloilia jonka hinta-arvio on 500 000€.</li>
 					</ul>
+				</article>
+				<hr/>
 			</div>
 		</body>
 	</html>
