--- a/Omasivu.html
+++ b/Omasivu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html lang="en">
 		<head>
-			<meta charset="UTF-8">
+			<meta charset="8">
 			<title>Omasivu</title>
 			<link href="Omasivu.css" type="text/css" rel="stylesheet"/>
 		</head>
@@ -12,10 +12,10 @@
 				<h1>Homamin kotisivu</h1>
 				<nav>
 					<ul>
-						<li><a href="">Koti</a></li>
-						<li><a href="">Minusta</a></li>
-						<li><a href="">Harrastukseni</a></li>
-						<li><a href="">Curriculum Vitae</a></li>
+						<li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu.html">Koti</a></li>
+						<li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu2.html">Minusta</a></li>
+						<li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu3.html">Harrastukseni</a></li>
+						<li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu4.html">Curriculum Vitae</a></li>
 					</ul>
 				</nav>
 				</header>
@@ -25,22 +25,46 @@
 					<p>Suomeen tullessa nimeni Humaam käännettiin Homamiksi.</p>
 					<p>Homam/Humam on muslimi nimi, joka on peräisin Arabian kielestä. Nimen merkitys on rohkeaa tai antelias. Humam nimen suosiosijoitus on 6359 ja onnennumero on 2.</p>
 					<p>Nimi on yksi hienoimmista musliminimistä, jonka vanhemmat rakastavat antaa pojalleen Arabian maissa. Humam on muslimimaissa yksi suosituimmista nimitrendeistä. Sen helppo ääntäminen tekee siitä houkuttelevimman vauvan nimen.</p>
-					</article>			
+					<p class="lähde">Lähde: en.wikipedia.org</p>
+</article>			
 				</aside>
 				<section>
 					<h2>Hei ja tervetuloa Homamin kotisivulle!</h2>
-					<p>Näiltä kotisivuilta löydät tietoa Homamista, hänen historiastaan, harrastuksistaan ja työ-ja koulutushistoriastaan.
-				</section>
+					<p>Näiltä kotisivuilta löydät tietoa Homamista, hänen historiastaan, harrastuksistaan ja työ-ja koulutushistoriastaan.</p>
 				<hr/>	
 				<article>
-					<h3>Googlesta löydettyjä Homam-nimisiä juttuja</h3>
+					<h2>Netistä löydettyjä Homam-nimisiä juttuja</h2>
 					<ul>
 						<li>Homam on Intialaisten juhla.</li>
 						<li>Homam on Arabian kielinen elokuva.</li>
 						<li>Homam Ahmed on jalkapalloilia jonka hinta-arvio on 500 000€.</li>
+						<li>Homam on kylä Iranissa</li>
+						
 					</ul>
+					<p class="lähde">Lähde:en.wikipedia.org</p>
 				</article>
 				<hr/>
+				<article>
+					<h2>Homam lyhenteitä</h2>
+					<ul>
+						<li>Heroes of Might and Magic tietokone pelin lyhenne on Homam</li>
+						
+					</ul>
+					<p class="lähde">Lähde:en.wikipedia.org</p>
+				</article>
+				 <hr />
+				<article>
+					<h2>Homamit kartalla</h2>
+					<ul>
+						<li>Homam on yksittäinen tähti pohjoisessa Pegasuksen tähdistössä.</li>
+						<li>Homam on kylä Cham Rudin maaseudulla Isfahanin maakunnassa Iranissa. Vuoden 2006 väestönlaskennassa sen väkiluku oli 152, 42 perheessä.</li>
+					</ul>
+					<p class="lähde">Lähde:en.wikipedia.org</p>
+				</article>
+				</section>
+				<footer>
+					<p>Jos on jotain muuta mitä haluat tietää Homamista, <a href="mailto:homam.al-mehsen@edu.keuda.fi">Ota yhteyttä</a><p>
+				</footer>
 			</div>
 		</body>
 	</html>
