--- a/Harjoitus 10.html
+++ b/Harjoitus 10.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html lang="en">
 <head><title>harjoitus 7</title>
-	<link href="tyylit.css" type="text/css" rel="stylesheet" />
+	<link href="tyylit0.css" type="text/css" rel="stylesheet" />
 	</head>
 <body>
 	<img src="Kuvat\kissa.jpeg" width="300px" id="eka">
