--- a/Omasivu.html
+++ b/Omasivu.html
@@ -2,7 +2,7 @@
 	<html lang="en">
 		<head>
 			<meta charset="8">
-			<title>Omasivu</title>
+			<title>Koti</title>
 			<link href="Omasivu.css" type="text/css" rel="stylesheet"/>
 		</head>
 		
@@ -13,12 +13,16 @@
 				<nav>
 					<ul>
 						<li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu.html">Koti</a></li>
+						<li>|</li>
 						<li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu2.html">Minusta</a></li>
+						<li>|</li>
 						<li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu3.html">Harrastukseni</a></li>
+						<li>|</li>
 						<li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu4.html">Curriculum Vitae</a></li>
 					</ul>
 				</nav>
 				</header>
+				<main>
 				<aside>
 					<article>
 					<h3>Tiesitkö?</h3>
@@ -29,8 +33,10 @@
 </article>			
 				</aside>
 				<section>
+				<article class="yläreuna">
 					<h2>Hei ja tervetuloa Homamin kotisivulle!</h2>
 					<p>Näiltä kotisivuilta löydät tietoa Homamista, hänen historiastaan, harrastuksistaan ja työ-ja koulutushistoriastaan.</p>
+				</article>
 				<hr/>	
 				<article>
 					<h2>Netistä löydettyjä Homam-nimisiä juttuja</h2>
@@ -62,6 +68,7 @@
 					<p class="lähde">Lähde:en.wikipedia.org</p>
 				</article>
 				</section>
+					</main>
 				<footer>
 					<p>Jos on jotain muuta mitä haluat tietää Homamista, <a href="mailto:homam.al-mehsen@edu.keuda.fi">Ota yhteyttä</a><p>
 				</footer>
