--- a/Omasivu2.html
+++ b/Omasivu2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="8">
-    <title>Omasivu2</title>
+    <title>Minusta</title>
     <link href="Omasivu.css" type="text/css" rel="stylesheet" />
 </head>
 
@@ -12,16 +12,20 @@
             <h1>Minusta</h1>
             <nav>
                 <ul>
-                    <li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu.html">Koti|</a></li>
-                    <li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu2.html">Minusta|</a></li>
-                    <li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu3.html">Harrastukseni|</a></li>
+                    <li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu.html">Koti</a></li>
+                    <li>|</li>
+                    <li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu2.html">Minusta</a></li>
+                    <li>|</li>
+                    <li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu3.html">Harrastukseni</a></li>
+                    <li>|</li>
                     <li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu4.html">Curriculum Vitae</a></li>
                 </ul>
             </nav>
         </header>
+        <main>
         <aside>
             <article>
-                <h2>Samana päivänä kun Homam syntyi, mutta eri vuonna</h2>
+                <h3>Samana päivänä kun Homam syntyi, mutta eri vuonna</h3>
                 <ul>
                     <li>1798 – Napoleon kaatoi pyramidien taistelussa Egyptin mamelukit.</li>
                     <li>1931 – CBS:n New Yorkin televisioasema aloitti ensimmäiset säännölliset jokapäiväiset televisiolähetykset Yhdysvalloissa.</li>
@@ -35,16 +39,19 @@
             </article>
         </aside>
         <section>
-            <h2>Kuka minä olen?</h2>
-            <p>Olen 30 vuotias tieto- ja viestintätekniikan opiskelija Keudasta.</p>
-        
+            <article class="yläreuna">
+                <h2>Kuka minä olen?</h2>
+                <p>Olen 30 vuotias tieto- ja viestintätekniikan opiskelija Keudasta.</p>
+            </article>
         <hr />
         <article>
-            <h2>Kuopiosta pääkaupunkiseudulle muuttanut Savon murretta puhuva mies</h2>
-                <p>Ainakin vielä tällähetkellä</p>
-                <img src="https://th.bing.com/th/id/R.afca3ecdacb9a7945cd0a2e1770f3221?rik=ooGowgMtJhMVGw&riu=http%3a%2f%2fupload.turkcewiki.org%2fwikipedia%2fcommons%2fthumb%2f4%2f47%2fKuopio_Market_Square2.jpg%2f1500px-Kuopio_Market_Square2.jpg&ehk=jFzCFI3NMr9R8s8boMdNal5L1pb7rec%2f8n34YFHNIvo%3d&risl=&pid=ImgRaw&r=0" />
+            <h2>Kuopiosta pääkaupunkiseudulle muuttanut</h2>
+                <p>Savon murretta puhuva irakilaistaustainen mies. Muutin juuri Helsingistä Vantaalle Rekolaan. Minulla on 6 sisarusta joista kaikki muut paitsi sisko asuu pääkaupunkiseudulla.</p>
+                <img src="https://th.bing.com/th/id/R.afca3ecdacb9a7945cd0a2e1770f3221?rik=ooGowgMtJhMVGw&riu=http%3a%2f%2fupload.turkcewiki.org%2fwikipedia%2fcommons%2fthumb%2f4%2f47%2fKuopio_Market_Square2.jpg%2f1500px-Kuopio_Market_Square2.jpg&ehk=jFzCFI3NMr9R8s8boMdNal5L1pb7rec%2f8n34YFHNIvo%3d&risl=&pid=ImgRaw&r=0" id="kuva1"/>
+                <p class="kuvateksti">Kuva Kuopion kaupungin torilta</p>
         </article>
         </section>
+        </main>
         <footer>
             <p>Jos on jotain muuta mitä haluat tietää Homamista, <a href="mailto:homam.al-mehsen@edu.keuda.fi">Ota yhteyttä</a><p>
         </footer>
