--- a/Omasivu3.html
+++ b/Omasivu3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="8">
-    <title>Omasivu3</title>
+    <title>Harrastukset</title>
     <link href="Omasivu.css" type="text/css" rel="stylesheet" />
 </head>
 
@@ -13,15 +13,19 @@
             <nav>
                 <ul>
                     <li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu.html">Koti</a></li>
+                    <li>|</li>
                     <li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu2.html">Minusta</a></li>
+                    <li>|</li>
                     <li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu3.html">Harrastukseni</a></li>
+                    <li>|</li>
                     <li><a href="file:///C:/Users/homam.al-mehsen/source/repos/HTML%20Harjoituksia/Omasivu4.html">Curriculum Vitae</a></li>
                 </ul>
             </nav>
         </header>
+        <main>
         <aside>
             <article>
-                <h2>Samana päivänä syntyneitä, mutta eri vuonna</h2>
+                <h3>Samana päivänä syntyneitä, mutta eri vuonna</h3>
                 <ul>
                     <li>1899 – Ernest Hemingway, vuoden 1954 Nobelin kirjallisuuspalkinnon saanut yhdysvaltalainen kirjailija</li>
                     <li>1923 – Rudolph Arthur Marcus (”Rudolph A. Marcus”), vuoden 1992 Nobelin kemianpalkinnon saanut kanadalainen kemisti</li>
@@ -35,20 +39,20 @@
             </article>
         </aside>
         <section>
-            <article>
+            <article class="yläreuna">
                 <h2>Urheilu</h2>
-                <p>Olen harrastanut thaiboxingia muutaman vuoden</p>
-                <img src="https://live.staticflickr.com/3491/5732664313_31577facf7_b.jpg" />
+                <p>Olen harrastanut thaiboxingia muutaman vuoden.</p>
+                <img src="https://live.staticflickr.com/3491/5732664313_31577facf7_b.jpg" id="kuva2"/>
+                <p class="kuvateksti">Thaiboxingia</p>
             </article>
             <hr/>
             <article>
                 <h2>Musiikki</h2>
-                <p>Teen veljieni kanssa räppiä. Kirjoitamme itse omat biisit, teemme omat biitit ja laulamme/räppäämme.</p>
-                <p>Meillä on veljeni luona oma studio missä teemme musiikkia.</p>
-                <p>Olen käynyt heittämässä muutaman keikan Vantaalla. esim Hakunilassa Viva mariassa</p>
+                <p>Teen veljieni kanssa räppiä. Kirjoitamme itse omat biisit, teemme omat biitit ja laulamme/räppäämme. Meillä on veljeni luona oma studio missä teemme musiikkia.</p>
+                <p>Olen käynyt heittämässä muutaman keikan Vantaalla valjen kanssa. esim Hakunilassa Viva mariassa. Olemme menossa keikalle myös Tampereelle ja Kuopioon tulevina 2 kk päästä.</p>
             </article>
         </section>
-        
+        </main>
         <footer>
             <p>Jos on jotain muuta mitä haluat tietää Homamista, <a href="mailto:homam.al-mehsen@edu.keuda.fi">Ota yhteyttä</a><p>
         </footer>
