--- a/Omasivu.html
+++ b/Omasivu.html
@@ -29,11 +29,11 @@
 					<p>Suomeen tullessa nimeni Humaam käännettiin Homamiksi.</p>
 					<p>Homam/Humam on muslimi nimi, joka on peräisin Arabian kielestä. Nimen merkitys on rohkeaa tai antelias. Humam nimen suosiosijoitus on 6359 ja onnennumero on 2.</p>
 					<p>Nimi on yksi hienoimmista musliminimistä, jonka vanhemmat rakastavat antaa pojalleen Arabian maissa. Humam on muslimimaissa yksi suosituimmista nimitrendeistä. Sen helppo ääntäminen tekee siitä houkuttelevimman vauvan nimen.</p>
-					<p class="lähde">Lähde: en.wikipedia.org</p>
+					<p class="lahde">Lähde: en.wikipedia.org</p>
 </article>			
 				</aside>
 				<section>
-				<article class="yläreuna">
+				<article class="ylareuna">
 					<h2>Hei ja tervetuloa Homamin kotisivulle!</h2>
 					<p>Näiltä kotisivuilta löydät tietoa Homamista, hänen historiastaan, harrastuksistaan ja työ-ja koulutushistoriastaan.</p>
 				</article>
@@ -47,7 +47,7 @@
 						<li>Homam on kylä Iranissa</li>
 						
 					</ul>
-					<p class="lähde">Lähde:en.wikipedia.org</p>
+					<p class="lahde">Lähde:en.wikipedia.org</p>
 				</article>
 				<hr/>
 				<article>
@@ -56,7 +56,7 @@
 						<li>Heroes of Might and Magic tietokone pelin lyhenne on Homam</li>
 						
 					</ul>
-					<p class="lähde">Lähde:en.wikipedia.org</p>
+					<p class="lahde">Lähde:en.wikipedia.org</p>
 				</article>
 				 <hr />
 				<article>
@@ -65,7 +65,7 @@
 						<li>Homam on yksittäinen tähti pohjoisessa Pegasuksen tähdistössä.</li>
 						<li>Homam on kylä Cham Rudin maaseudulla Isfahanin maakunnassa Iranissa. Vuoden 2006 väestönlaskennassa sen väkiluku oli 152, 42 perheessä.</li>
 					</ul>
-					<p class="lähde">Lähde:en.wikipedia.org</p>
+					<p class="lahde">Lähde:en.wikipedia.org</p>
 				</article>
 				</section>
 					</main>
