--- a/Omasivu2.html
+++ b/Omasivu2.html
@@ -35,11 +35,11 @@
                     <li>1969 – Ensimmäinen kuukävely: astronautti Neil Armstrong astui ensimmäisenä ihmisenä Kuun pinnalle.</li>
                     <li>1983 – Vostok-tutkimusasemalla Antarktiksella mitattiin maailman matalin lämpötila: −89,2 °C.</li>
                 </ul>
-                <p class="lähde">Lähde: wikipedia.fi</p>
+                <p class="lahde">Lähde: wikipedia.fi</p>
             </article>
         </aside>
         <section>
-            <article class="yläreuna">
+            <article class="ylareuna">
                 <h2>Kuka minä olen?</h2>
                 <p>Olen 30 vuotias tieto- ja viestintätekniikan opiskelija Keudasta.</p>
             </article>
