--- a/Omasivu3.html
+++ b/Omasivu3.html
@@ -34,12 +34,11 @@
                     <li>1957 – Stefan Löfven, Ruotsin pääministeri (2014–2021)</li>
                     <li>1968 – Samuli Edelmann, suomalainen näyttelijä ja laulaja</li>
                 </ul>
-                <p class="lähde">Lähde: Wikipedia.fi</p>
-
+                <p class="lahde">Lähde: Wikipedia.fi</p>
             </article>
         </aside>
         <section>
-            <article class="yläreuna">
+            <article class="ylareuna">
                 <h2>Urheilu</h2>
                 <p>Olen harrastanut thaiboxingia muutaman vuoden.</p>
                 <img src="https://live.staticflickr.com/3491/5732664313_31577facf7_b.jpg" id="kuva2"/>
