--- a/Omasivu4.html
+++ b/Omasivu4.html
@@ -34,12 +34,12 @@
                     <li>2017 – Hrvoje Šarinić, Kroatian pääministeri (1992–1993)</li>
                     <li>2022 – Reino Paasilinna, suomalainen kirjailija, poliitikko, Yleisradion pääjohtaja ja europarlamentaarikko</li>
                 </ul>
-                <p class="lähde">Lähde: Wikipedia.fi</p>
+                <p class="lahde">Lähde: Wikipedia.fi</p>
 
             </article>
         </aside>
         <section>
-            <article class="yläreuna">
+            <article class="ylareuna">
                 <h2>Opiskeluhistoriani</h2>
                 <p>Minulla on aiempi koulutus ja nyt opiskelen ohjelmistokehittäjäksi</p>
                 <img src="https://th.bing.com/th/id/R.97683118a5ca8457adf2eda09dde9268?rik=uZB9ZthfucmINA&riu=http%3a%2f%2fopiskelijankuopio.fi%2fwp%2fwp-content%2fuploads%2f2018%2f06%2fSavon_ammattiopisto_tunnus_300dpi.jpg&ehk=xa8%2bGoNAuXBYCaey5bmyooGVdZddIvYH36x4QcQvjFc%3d&risl=&pid=ImgRaw&r=0" class="kuva3"/>
