--- a/Omasivu2.html
+++ b/Omasivu2.html
@@ -36,19 +36,23 @@
                     <li>1983 – Vostok-tutkimusasemalla Antarktiksella mitattiin maailman matalin lämpötila: −89,2 °C.</li>
                 </ul>
                 <p class="lahde">Lähde: wikipedia.fi</p>
+                <p></p>
             </article>
         </aside>
         <section>
             <article class="ylareuna">
                 <h2>Kuka minä olen?</h2>
                 <p>Olen 30 vuotias tieto- ja viestintätekniikan opiskelija Keudasta.</p>
+                <p></p>
             </article>
         <hr />
         <article>
             <h2>Kuopiosta pääkaupunkiseudulle muuttanut</h2>
                 <p>Savon murretta puhuva irakilaistaustainen mies. Muutin juuri Helsingistä Vantaalle Rekolaan. Minulla on 6 sisarusta joista kaikki muut paitsi sisko asuu pääkaupunkiseudulla.</p>
-                <img src="https://th.bing.com/th/id/R.afca3ecdacb9a7945cd0a2e1770f3221?rik=ooGowgMtJhMVGw&riu=http%3a%2f%2fupload.turkcewiki.org%2fwikipedia%2fcommons%2fthumb%2f4%2f47%2fKuopio_Market_Square2.jpg%2f1500px-Kuopio_Market_Square2.jpg&ehk=jFzCFI3NMr9R8s8boMdNal5L1pb7rec%2f8n34YFHNIvo%3d&risl=&pid=ImgRaw&r=0" id="kuva1"/>
-                <p class="kuvateksti">Kuva Kuopion kaupungin torilta</p>
+                <figure>
+                <img src="https://th.bing.com/th/id/R.afca3ecdacb9a7945cd0a2e1770f3221?rik=ooGowgMtJhMVGw&riu=http%3a%2f%2fupload.turkcewiki.org%2fwikipedia%2fcommons%2fthumb%2f4%2f47%2fKuopio_Market_Square2.jpg%2f1500px-Kuopio_Market_Square2.jpg&ehk=jFzCFI3NMr9R8s8boMdNal5L1pb7rec%2f8n34YFHNIvo%3d&risl=&pid=ImgRaw&r=0" alt="Kuopio"/>
+                <figcaption>Kuva Kuopion kaupungin torilta</figcaption>
+                </figure>
         </article>
         </section>
         </main>
