--- a/Omasivu3.html
+++ b/Omasivu3.html
@@ -35,14 +35,18 @@
                     <li>1968 – Samuli Edelmann, suomalainen näyttelijä ja laulaja</li>
                 </ul>
                 <p class="lahde">Lähde: Wikipedia.fi</p>
+                <p></p>
             </article>
         </aside>
         <section>
             <article class="ylareuna">
                 <h2>Urheilu</h2>
                 <p>Olen harrastanut thaiboxingia muutaman vuoden.</p>
-                <img src="https://live.staticflickr.com/3491/5732664313_31577facf7_b.jpg" id="kuva2"/>
-                <p class="kuvateksti">Thaiboxingia</p>
+                <figure>
+                <img src="https://live.staticflickr.com/3491/5732664313_31577facf7_b.jpg" width="700px" />
+                <figcaption>Thaiboxingia</figcaption>
+                </figure>
+                <p></p>
             </article>
             <hr/>
             <article>
