--- a/Cloud-idea harjoitus.html
+++ b/Cloud-idea harjoitus.html
@@ -10,7 +10,7 @@
     <main>
         <header id="header">
             <figure>
-            <img src="kuvat/logo.jpg"   alt="cloud-idea" id="logo" />
+            <img src="kuvat/logo.jpg"  id="logo" />
             <p id="pilvi">Pilvi-idea</p>
             </figure>
         </header>
@@ -21,17 +21,17 @@
         <article id="eka">
             <ul class="pointit">
                 <li>
-                    <img src="kuvat/number1.png" alt="pointti1" />
+                    <img src="kuvat/number1.png" />
                     <h4>Ensimmäinen pointti</h4>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum had been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 </li>
                 <li>
-                    <img src="kuvat/number2.png" alt="pointti2" />
+                    <img src="kuvat/number2.png" />
                     <h4>Toinen pointti</h4>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum had been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.'</p>
                 </li>
                 <li>
-                    <img src="kuvat/number3.png" alt="pointti3" />
+                    <img src="kuvat/number3.png" />
                     <h4>Kolmas pointti</h4>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum had been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 </li>
@@ -48,37 +48,37 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum had been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 </header>
                 <div>
-                    <label for="nimi">Nimi *</label>
-                    <input id="nimi" type="text" />
+                    <label>Nimi *</label>
+                    <input type="text" />
                 </div>
                 <div>
-                    <label for="sähköposti">Sähköposti *</label>
-                    <input id="sähköposti" type="text" />
+                    <label>Sähköposti *</label>
+                    <input type="text" />
                 </div>
                 <div>
-                    <label for="yritys">Yritys</label>
-                    <input id="yritys" type="text" />
+                    <label>Yritys</label>
+                    <input type="text" />
                 </div>
                 <div>
-                    <label for="puhelinnumero">Puhelinnumero</label>
-                    <input id="puhelinnumero" type="text" />
+                    <label>Puhelinnumero</label>
+                    <input type="text" />
                 </div>
-                <div class="lähetä">
+                <div>
                     <p>* Vaaditut kentät</p>
-                    <input type="submit" value="lähetä" />
+                    <input id="lähetä" type="submit" value="Lähetä" />
                 </div>
-                <hr id="harmaaviiva" />
+                <hr/>
                 <p>Emme koskaan jaa asiakastietoja eteenpäin millekkään yritykselle</p>
             </form>
         </article>
                 <section>
-                    <img src="kuvat/testimonial.png" alt="testimonial" />
+                    <img src="kuvat/testimonial.png" />
                     <p>
                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum had been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book
                     </p>
                 </section>
                 <hr/>
-                <footer id="footer">
+                <footer>
                     <p>Copyright © Homam Al-mehsen, 2023</p>
                 </footer>
     </main>
